--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.7.3
   shared_preferences: ^2.5.4
   http: ^1.6.0
+  device_preview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
